--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,11 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
+  <form name="contact" subject='A Message From Website' netlify netlify-honeypot="bot-field" hidden>
+    <input type="text" name="name" />
+    <input type="email" name="email" />
+    <textarea name="message"></textarea>
+  </form>
   <app-root></app-root>
 </body>
 </html>
