--- a/src/index.html
+++ b/src/index.html
@@ -16,5 +16,8 @@
     <textarea name="message"></textarea>
   </form>
   <app-root></app-root>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBlRf_cw8v7FYzrg_Q_CGA4xQjr0hVedBo&callback=initMap"
+    async defer></script>
 </body>
+
 </html>
